sumo/tests/dfrouter/errors/network/edges/root__edges__one_double/errors.dfrouter
Error: The edge '1' occures at least twice.
Error: At edge '1': succeding edge '2' does not exist.
Error: An unknown edge occured within 'net.net.xml' (id='2').
Quitting (on error).
